2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Fix infinite loop.
	* perl/Amanda/Application/Zfs.pm: Fix for freebsd.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Run script only if todo is set.

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amfetchdump.pl: chdir() before rmtree().

2008-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amarchiver.pl: chdir() before rmtree().

2008-12-17  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amgtar.8.xml: atime_preserve -> atime-preserve
	* installcheck/pp-scripts.pl: add atime-preserve property

2008-12-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xslt/html.xsl.in: add <div class="refentry" /> for the benefit
	  of amanda.css.

2008-12-16 Dan Locks <dwlocks@zmanda.com>
	* config/amanda/changer.m4: update AC_CHECK_HEADERS to get rid of
	  "present but cannot be compiled" warning during debian packaging.

2008-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Don't close if it's not open.

2008-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Add amlog-script.
	* application-src/amlog-script.pl: New scripts.
	* server-src/amcheck.c , server-src/planner.c,
	  server-src/server_util.c, server-src/server_util.h,
	  server-src/driver.c: Add level argument to run_server_scripts().
	  The script is executed with that level argument.
	* installcheck/pp-scripts.pl: Check scripts.
	* installcheck/Makefile.am: Add pp-scripts.

2008-12-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am man/xml-source/amanda-changers.7.xml
	  man/xml-source/amanda-devices.7.xml man/xml-source/amanda.8.xml
	  man/xml-source/amanda.conf.5.xml: new documentation
	* perl/Amanda/Changer.pm: not finished yet!
	* perl/Amanda/Changer/compat.pm: fix error message
	* server-src/changer.c changer-src/chg-glue.pl:
	  better error handling
